--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     </div>
 
-
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
